Cherry-pick 19ae041e1fa8. rdar://problem/83393652

AX: aria-errormessage should not be exposed when aria-invalid is false
    https://bugs.webkit.org/show_bug.cgi?id=230611
    rdar://problem/83393652

    Reviewed by Chris Fleizach.

    Quoting https://www.w3.org/TR/wai-aria-1.2/#aria-errormessage:

      > User agents MUST NOT expose aria-errormessage for an object with an aria-invalid value of false.

    This patch implements this behavior.

    * LayoutTests/accessibility/custom-elements/describedby-shadow.html:
    * LayoutTests/accessibility/custom-elements/describedby.html:
    * LayoutTests/accessibility/element-reflection-ariaerrormessage.html:
    This test relied on aria-errormessages being exposed despite
    aria-invalid computing to false. This patch fixes this by adding
    aria-invalid="true" to these tests where necessary.

    * LayoutTests/accessibility/ios-simulator/aria-errormessage-expected.txt:
    * LayoutTests/accessibility/ios-simulator/aria-errormessage.html:
    * LayoutTests/accessibility/mac/aria-errormessage-expected.txt:
    * LayoutTests/accessibility/mac/aria-errormessage.html:
    * Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
    (-[WebAccessibilityObjectWrapper accessibilityErrorMessageElements]):
    * Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
    (-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

    Canonical link: https://commits.webkit.org/260545@main

Canonical link: https://commits.webkit.org/259548.237@safari-7615-branch